@@ -16,6 +16,7 @@
 	- fix: new FILENAMES tags require package index, not pointer in lookups.
 	- rename new FILENAMES tags to BASENAMES/DIRNAMES/DIRINDEXES.
 	- fix: don't look at password when searching urlCache.
+	- add contentLength sanity check on rpmdb headerWrite.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
